fix last instructions notes and credits alignment

--- a/src/views/preview/preview.scss
+++ b/src/views/preview/preview.scss
@@ -466,7 +466,7 @@ $stage-width: 480px;
         flex: 1;
     }
 
-    .project-description.last {
+    .project-description:last-of-type {
         margin-bottom: 0;
     }
 
